syntax = 'proto3';

import "google/protobuf/timestamp.proto";

package TestPipes;

message TestRequest {
}

message TestResponse {
}

service TestService {
	rpc TestMethod(TestRequest) returns (TestResponse) {}
}